--- a/05/demos/index_orig.html
+++ b/05/demos/index_orig.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.1397.0.min.js"></script>
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.259.1.min.js"></script>
     <script>
         var albumBucketName = 'rekog-album';
-        var bucketRegion = 'eu-west-2';
-        var IdentityPoolId = 'eu-west-2:776e6782-ed47-4268-98fb-ad6bd0c722cf';
+        var bucketRegion = 'us-east-1';
+        var IdentityPoolId = 'us-east-1:045364f9-c373-4c64-8abf-20eb66dcce2e';
 
         AWS.config.update({
             region: bucketRegion,
